# PODOMotionPractice

./: README.md
TaskLevelTest/: .gitignore  CMakeLists.txt
TaskLevelTest/exe/: Approach.m  ApproachZMPcheck.m  ApproachZMPcheck.m~  COM.m  CoMZMP.m  Core_Config.db  Daemon  Daemon_Choreonoid  MissionDoor  PODOLauncher  SingleLog.m  app.m  matlab_workspace.mat  transformation.m  untitled.m  untitled2.m  untitled3.m  untitled4.m
TaskLevelTest/exe/configs/: Daemon_IMU_offset.ini  LauncherConfig.ini
TaskLevelTest/share/Headers/: JointInformation.h  RBSharedMemory.h  TaskCommandReturn.h  UserSharedMemory.h  commandlist.h
TaskLevelTest/src/ALPrograms/: ALPrograms.pro
TaskLevelTest/src/ALPrograms/ApproachBox/: ApproachBox.pro  CMakeLists.txt  ManualCAN.cpp  ManualCAN.h  StateMachine.cpp  StateMachine.h  controller.cpp  main.cpp  manualwalking.cpp
TaskLevelTest/src/ALPrograms/ApproachBox/solver/: ldl.cpp  solver.h
TaskLevelTest/src/PODOGUI/: CommonHeader.h  Doordialog.cpp  Doordialog.h  Doordialog.ui  GUIMainWindow.cpp  GUIMainWindow.h  PODOGUI.pro  RealWalkDialog.cpp  RealWalkDialog.h  RealWalkDialog.ui  TestDialog.cpp  TestDialog.h  TestDialog.ui  TutorialDialog.cpp  WBWalkDialog.cpp  WBWalkDialog.h  WBWalkDialog.ui  ZMPGraphDialog.cpp  ZMPGraphDialog.h  ZMPGraphDialog.ui  inversecheckdialog.cpp  inversecheckdialog.h  inversecheckdialog.ui  joystickdialog.cpp  joystickdialog.h  joystickdialog.ui  liftboxdialog.cpp  liftboxdialog.h  liftboxdialog.ui  omniwheeldialog.cpp  omniwheeldialog.h  omniwheeldialog.ui  walkingdialog.cpp  walkingdialog.h  walkingdialog.ui
(+130 files in other folders)
