set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/ALBuild/ALTutorial)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Core REQUIRED)
add_executable(ALTutorial main.cpp)
find_library(COPPERPLATE copperplate /usr/xenomai/lib)
find_library(COBALT cobalt /usr/xenomai/lib)
find_library(ALCHEMY alchemy /usr/xenomai/lib)
target_include_directories(ALTutorial PRIVATE /usr/xenomai/include /usr/xenomai/include/cobalt ${podo_SOURCE_DIR}/share/Headers)
qt5_use_modules(ALTutorial Core)
target_link_libraries(ALTutorial ${ALCHEMY} ${COPPERPLATE} ${COBALT} rt pcan)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /usr/xenomai/lib/xenomai/bootstrap.o -Wl,--wrap=main -Wl,--dynamic-list=/usr/xenomai/lib/dynlist.ld")